--- a/7f9a0460.md
+++ b/7f9a0460.md
@@ -1,3 +1,10 @@
+---
+title: The Basic Principle of Counting
+id: 7f9a0460
+date: 2022-02-28
+author: Juan Lopes
+---
+
 # The Basic Principle of Counting
 
 Suppose that two experiments are to be performed. Then if experiment 1 can result in any one of $m$ possible outcomes and if, for each outcome of experiment 1, there are $n$ possible outcomes of experiment 2, then together there are $mn$ possible outcomes of the two experiments.
