--- a/f9496fcf.md
+++ b/f9496fcf.md
@@ -1,5 +1,12 @@
+---
+title: Combinatorial Analysis
+id: f9496fcf
+date: 2022-02-28
+author: Juan Lopes
+tags: [combinatorial-analysis, book, counting]
+---
+
 # Combinatorial Analysis
-tags: #combinatorial-analysis #book #counting
 
 ## Motivation (counting problems)
 A communication system is to consist of $n$ seemingly identical antennas that are to be lined up in a linear order. The resulting system will then be able to receive all incoming signals, and will be called *functional*, as long as no two consecutive antennas are defective. If it turns out that exactly $m$ of the $n$ antennas are defective, what is the probability that the resulting system will be functional? For instance, in the special case where $n = 4$ and $m = 2$, there are 6 possible system configurations, namely:
@@ -15,4 +22,4 @@ By analyzing the configurations we notice that we have a functional system in th
 
 The preceding discussion shows how useful it is to *have an effective method for counting the number of ways that things can occur*
 
-## [[3n60-the-basic-principle-of-counting]]
+## [[7f9a0460]]
